dataset1235/2025-2/2868285114/users/221116065/executions/3649835072_2667036473.log
== RUN (2025-08-23 21:08:54)
-- CODE: 
temp_celsius = float(input("Digite a Temperatura (Em Celsius): "))

conversao = temp_celsius + 273.15

print(round(conversao, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a Temperatura (Em Celsius): 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a Temperatura (Em Celsius): 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a Temperatura (Em Celsius): 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a Temperatura (Em Celsius): 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a Temperatura (Em Celsius): 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a Temperatura (Em Celsius): 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 21:08:32)
-- CODE: 
temp_celsius = float(input("Digite a Temperatura (Em Celsius): "))

conversao = temp_celcius + 273.15

print(round(conversao, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    conversao = temp_celcius + 273.15
                ^^^^^^^^^^^^
NameError: name 'temp_celcius' is not defined. Did you mean: 'temp_celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    conversao = temp_celcius + 273.15
                ^^^^^^^^^^^^
NameError: name 'temp_celcius' is not defined. Did you mean: 'temp_celsius'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    conversao = temp_celcius + 273.15
                ^^^^^^^^^^^^
NameError: name 'temp_celcius' is not defined. Did you mean: 'temp_celsius'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    conversao = temp_celcius + 273.15
                ^^^^^^^^^^^^
NameError: name 'temp_celcius' is not defined. Did you mean: 'temp_celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    conversao = temp_celcius + 273.15
                ^^^^^^^^^^^^
NameError: name 'temp_celcius' is not defined. Did you mean: 'temp_celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    conversao = temp_celcius + 273.15
                ^^^^^^^^^^^^
NameError: name 'temp_celcius' is not defined. Did you mean: 'temp_celsius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 21:09:01)
-- CODE: 
temp_celsius = float(input("Digite a Temperatura (Em Celsius): "))

conversao = temp_celsius + 273.15

print(round(conversao, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a Temperatura (Em Celsius): 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a Temperatura (Em Celsius): 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a Temperatura (Em Celsius): 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a Temperatura (Em Celsius): 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a Temperatura (Em Celsius): 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a Temperatura (Em Celsius): 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
